--- a/weather-app/src/style.css
+++ b/weather-app/src/style.css
@@ -1,6 +1,7 @@
 .container {
     width: 100%;
     height: 100vh;
+    padding:50px;
     background-color: rgb(116,152,225);
 }
 .weather {
@@ -8,6 +9,8 @@
     padding: 30px;
     border-radius: 10px;
     margin: 50px auto;
+    text-align: center;
+    color: white;
     background: linear-gradient(130deg, rgb(86,86,235), rgb(5,5,199));
 }
 .serach {
@@ -18,11 +21,54 @@
 .search input {
     border: none;
     outline: 0;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+    padding:12px 25px;
+    font-size:18px;
+    background-color:  rgb(222, 237, 243);
+    color: black;
+    border-radius: 30px;
+  flex: 1;
+  margin-right: 12px;
+
+}
+.search button {
+    border: none;
+    outline:0;
+    width:50px;
+    height:50px;
+    border-radius:50;
     cursor: pointer;
+
 }
 .search button img {
     width:20px;
 }
+/* .winfo .icon {
+    margin-top: 20px;
+    width:170px;
+}
+.winfo h1 {
+    font-size: 70px;
+    font-weight:500;
+    margin-top: 5px;
+}
+.winfo h2 {
+    font-size: 40px;
+    font-weight: 400;
+    margin-top: -40px;
+}
+.details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 20px;
+    margin-top: 50px;
+}
+.details .col {
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+.details .col img {
+    width: 45px;
+    margin-right: 10px;
+} */
